--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,10 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="PowerShellCMs" asp-action="Index" asp-route-cmd="ls">PowerShell</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PowerShellCMs" asp-action="Index">PowerShell</a>
                         </li>
                     </ul>
                 </div>
