--- a/Views/PowerShellCMs/Index.cshtml
+++ b/Views/PowerShellCMs/Index.cshtml
@@ -22,6 +22,7 @@
                 },
                 success: function (json) {
                     $("#exev").text(json)
+                    $("#cmd").val('')
                 },
 
             })
